Update CTA link in index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer{
     <li>💳 Stable income can help eliminate old evictions or bad credit</li>
   </ul>
 
-  <a class="cta" href="https://afflat3a2.com/trk/lnk/704E6BC1-B11C-4777-B921-E5B8701A00D5/?o=19113&c=918277&a=735988&k=91D04BD546118A3889D4A4517EF2E0CE&l=20195&s1=1325=N-SAS-Peter" target="_blank" rel="noopener sponsored">
+  <a class="cta" href="https://afflat3a2.com/trk/lnk/31F6CB3E-BC17-4587-B808-F5AA016F91DE/?o=19113&c=918277&a=741875&k=825C6CA3F8288F9B395C88AF7C6088B2&l=20195&s1=SHA-N-SAS-Peter" target="_blank" rel="noopener sponsored">
      ➜ Start Credit Check
   </a>
 
