Update affiliate link in index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer{
     <li>💳 Stable income can help eliminate old evictions or bad credit</li>
   </ul>
 
-  <a class="cta" href="https://nexfusionmediaoffers.trakaff.net//click/eXMKdAnL?sub1=M2" target="_blank" rel="noopener sponsored">
+  <a class="cta" href="https://afflat3b3.com/trk/lnk/AD839F7F-4777-40E2-839D-271606B3FFD5/?o=19113&c=918277&a=760065&k=A4A7A21C94953012A00E6D812689C984&l=20195&s1=1325=N-SAS-Peter" target="_blank" rel="noopener sponsored">
      ➜ Start Credit Check
   </a>
 
